# SigSolid

./: .gitignore  CMakeLists.txt  Changelog.md  README.md
.circleci/: osx_install_dependencies.sh
docs/: 070-breaking-changes.rst  Solidity.g4  brand-guide.rst  contributing.rst  index.rst  layout-of-source-files.rst  structure-of-a-contract.rst
libevmasm/: Assembly.cpp  Assembly.h  GasMeter.cpp  Instruction.cpp  Instruction.h  KnownState.cpp  LinkerObject.h  SemanticInformation.cpp  SemanticInformation.h
liblangutil/: Scanner.cpp  Scanner.h  Token.cpp  Token.h
libsmtutil/: CHCSmtLib2Interface.cpp  CHCSmtLib2Interface.h  CHCSolverInterface.h  Z3CHCInterface.cpp  Z3CHCInterface.h
libsolutil/: CommonData.cpp  FixedHash.h
libyul/: AsmAnalysis.cpp  AsmAnalysis.h  AsmParser.cpp  AsmParser.h  AssemblyStack.cpp  CMakeLists.txt  CompilabilityChecker.cpp  CompilabilityChecker.h  Object.cpp  Object.h  SideEffects.h
signalslot/: README.md  parse.pl
signalslot_parse_script/: README.md  parse.pl
solc/: CommandLineInterface.cpp  (+1 more)
solls/: CMakeLists.txt  LanguageServer.cpp  LanguageServer.h  README.md  helper.h  main.cpp
solls/lsp/: CMakeLists.txt  InputHandler.cpp  InputHandler.h  Logger.h  MessageParser.cpp  MessageParser.h  OutputGenerator.cpp  OutputGenerator.h  README.md  Range.h  Server.cpp  Server.h  TextBuffer.h  Transport.cpp  Transport.h  VFS.cpp  VFS.h  protocol.h
solls/sandbox/: 01-initialize-request.json  02-initialize-reply.json  05-textDocument.didClose.json  06-textDocument.hover.json  07-textDocument.didChange.json  README.md
solsp/: CMakeLists.txt  LanguageServer.cpp  LanguageServer.h  README.md  main.cpp
solsp/lsp/: CMakeLists.txt  InputHandler.cpp  InputHandler.h  MessageParser.cpp  MessageParser.h  OutputGenerator.h  Range.h  Server.h  VFS.cpp  VFS.h  protocol.cpp  protocol.h
(+459 files in other folders)
